--- a/web/index.html
+++ b/web/index.html
@@ -41,5 +41,28 @@
     }
   </script>
   <script src="main.dart.js" type="application/javascript"></script>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+       https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-analytics.js"></script>
+
+  <script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyB8qjCCAJXE_X3Tw5bgCDpIUof0DlpWLR0",
+    authDomain: "dancewebsite-d380e.firebaseapp.com",
+    projectId: "dancewebsite-d380e",
+    storageBucket: "dancewebsite-d380e.appspot.com",
+    messagingSenderId: "130417449045",
+    appId: "1:130417449045:web:8112278bca6d7498ec1cdc",
+    measurementId: "G-MTCXVXXCLB"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
 </body>
 </html>
